--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "build": "babel app.js -d dist",
-        "start": "npm run build && nodemon app.js"
+        "start": "nodemon app.js"
     },
     "author": "SARA'H",
     "dependencies": {
@@ -23,6 +23,7 @@
         "mongoose-array-validator": "^1.0.3",
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
+        "nodemon": "^2.0.15",
         "react-scripts": "^5.0.0",
         "validator": "^13.7.0"
     },
